@@ -189,7 +189,7 @@ forcetransfer=无视爆仓检查
 CMBProduceTroop=&O. 造兵
 CMBRaid=&S. 出兵
 vres=资源
-newcap=&X. 设为新主村
+newcap=&C. 刷新主村
 showallarmy=&A. 显示所有军种
 Great=&G. 大兵营或大马厩或皇宫
 TResourceLimit=军队建造资源限制
