@@ -189,7 +189,7 @@ forcetransfer=Skip full check
 CMBProduceTroop=Pr&oduce troops
 CMBRaid=&Send troops
 vres=Res
-newcap=Set as New capital
+newcap=Refresh &Capital Information
 showallarmy=Show &All Army
 Great=Great barracks&&Great stable or Palace
 TResourceLimit=Resource LowerLimit of Producing Troop
