@@ -1,4 +1,10 @@
-﻿-= Stran 1.3.0 [2009-12-18 Stran 研发版本] 发布 =-
+﻿-= Stran 1.3.0.1 [2009-12-20 Stran 研发版本] 发布 =-
+新增功能
+- 新增刷新主村资讯，取代手动设定选项 (chihsun)
+- 自动更新村庄排序，与网页显示同步 (chihsun)
+- 读取外城建设时若侦测到攻击讯息时，自动更新集结点讯息 (chihsun)
+
+-= Stran 1.3.0 [2009-12-18 Stran 研发版本] 发布 =-
 新增功能
 - 汇出/汇入村庄的资源限制 (chihsun)
 - 自动更新村庄排序，与网页显示同步 (chihsun)
@@ -7,6 +13,7 @@
 - 修正建筑队列代码 (chihsun)
 - 修正罗马缺粮无法建造时不正常删除队列 (chihsun)
 - 改进探测军队资讯的代码 (依资源存量升级) (dai2050)
+- 修正大仓大马建造军队的判断错误 (chihsun)
 
 -= Stran 1.2.9 [2009-12-12 独立更新 Stran 版本] 发布 =-
 新增功能
